# test-substrate-rpc

./: .gitignore  Cargo.toml  README.md
src/: client.rs  errors.rs  extrinsict.rs  main.rs
