[package]
name = "test-substrate-rpc"
version = "0.1.0"
authors = ["satellitex <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.sr-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.substrate-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.metadata]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-metadata'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.sr-rpc]
optional = true
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-rpc'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.node-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-runtime'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies]
jsonrpc-core-client = { optional = true, features = ["ws"]}
jsonrpc-core = { optional = true }
jsonrpc-pubsub = { optional = true }
parity-codec = "3.2"
futures = { version = "0.1.26", optional = true }
tokio = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
failure = { version = "0.1.5", optional = true }

[features]
default = ["std"]
std = [
    "sr-primitives/std",
    "substrate-primitives/std",
    "metadata/std",
    "node-runtime/std",
    "node-primitives/std",
    "parity-codec/std",
    "sr-rpc",
    "jsonrpc-core-client",
    "jsonrpc-core",
    "jsonrpc-pubsub",
    "futures",
    "tokio",
    "serde",
    "serde_json",
    "failure",
]