[package]
name = "test-substrate-rpc"
version = "0.1.0"
authors = ["satellitex <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.sr-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.substrate-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies.metadata]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-metadata'
tag = 'v1.0.0rc2'

[dependencies.sr-rpc]
optional = true
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-rpc'
rev = "bdb87ddab9062cf2d1269e90736cab633d28fe52"

[dependencies]
jsonrpc-core-client = { version = "12.0.0", optional = true, features = ["ws"]}
jsonrpc-core = { version = "12.0.0", optional = true }
jsonrpc-pubsub = { version = "12.0.0", optional = true }
parity-codec = "3.2"
futures = { version = "0.1.26", optional = true }
tokio = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
failure = { version = "0.1.5", optional = true }

[features]
default = ["std"]
std = [
    "sr-primitives/std",
    "substrate-primitives/std",
    "metadata/std",
    "parity-codec/std",
    "sr-rpc",
    "jsonrpc-core-client",
    "jsonrpc-core",
    "jsonrpc-pubsub",
    "futures",
    "tokio",
    "serde",
    "serde_json",
    "failure",
]